--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C__)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(C__ src/main.cpp)
+add_executable(C__ src/main.cpp src/Ant.cpp src/Ant.h src/Coord.cpp src/Coord.h src/Worker.cpp src/Worker.h)
